// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generic currency validator accept 0 1`] = `
{
  "data": {
    "heinz": "0",
  },
  "success": true,
}
`;

exports[`generic currency validator accept 1 1`] = `
{
  "data": {
    "heinz": "1",
  },
  "success": true,
}
`;

exports[`generic currency validator accept 1.01 1`] = `
{
  "data": {
    "heinz": "1.01",
  },
  "success": true,
}
`;

exports[`generic currency validator accept 2 1`] = `
{
  "data": {
    "heinz": "2",
  },
  "success": true,
}
`;

exports[`generic currency validator accept 3 1`] = `
{
  "data": {
    "heinz": "3",
  },
  "success": true,
}
`;

exports[`generic currency validator accept 5 1`] = `
{
  "data": {
    "heinz": "5",
  },
  "success": true,
}
`;

exports[`generic currency validator accept 500 1`] = `
{
  "data": {
    "heinz": "500",
  },
  "success": true,
}
`;

exports[`generic currency validator accept too few dp 1`] = `
{
  "data": {
    "heinz": "£12.2",
  },
  "success": true,
}
`;

exports[`generic currency validator accept £0 1`] = `
{
  "data": {
    "heinz": "£0",
  },
  "success": true,
}
`;

exports[`generic currency validator accept £1 1`] = `
{
  "data": {
    "heinz": "£1",
  },
  "success": true,
}
`;

exports[`generic currency validator accept £1.01 1`] = `
{
  "data": {
    "heinz": "£1.01",
  },
  "success": true,
}
`;

exports[`generic currency validator accept £2 1`] = `
{
  "data": {
    "heinz": "£2",
  },
  "success": true,
}
`;

exports[`generic currency validator accept £3 1`] = `
{
  "data": {
    "heinz": "£3",
  },
  "success": true,
}
`;

exports[`generic currency validator accept £5 1`] = `
{
  "data": {
    "heinz": "£5",
  },
  "success": true,
}
`;

exports[`generic currency validator accept £500 1`] = `
{
  "data": {
    "heinz": "£500",
  },
  "success": true,
}
`;

exports[`generic currency validator decline bad input 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "generic": true,
      "i18n": "errors.generic.currency.not_a_number"
    },
    "path": [
      "heinz"
    ],
    "message": "the value 'NewJeans' is not a number"
  }
]],
  "success": false,
}
`;

exports[`generic currency validator decline infinity 1`] = `
{
  "error": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [
      "heinz"
    ],
    "message": "forms.errors.invalid_type"
  }
]],
  "success": false,
}
`;

exports[`generic currency validator decline too big 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "count": 1000000,
      "generic": true,
      "i18n": "errors.generic.currency.too_big"
    },
    "path": [
      "heinz"
    ],
    "message": "the value 'NewJeans' is too bigg (1000000)"
  }
]],
  "success": false,
}
`;

exports[`generic currency validator decline too little 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "count": 0,
      "generic": true,
      "i18n": "errors.generic.currency.too_small"
    },
    "path": [
      "heinz"
    ],
    "message": "the value 'NewJeans' is too smol (0)"
  }
]],
  "success": false,
}
`;

exports[`generic currency validator decline too many dp 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "generic": true,
      "i18n": "errors.generic.currency.two_decimal_places"
    },
    "path": [
      "heinz"
    ],
    "message": "the value 'NewJeans' is not 2dp"
  }
]],
  "success": false,
}
`;
